@@ -73,6 +73,15 @@
 		/** LED mask for the library LED driver, to indicate that the USB interface is busy. */
 		#define LEDMASK_USB_BUSY         LEDS_LED2
 
+		/** Total number of logical drives within the device - must be non-zero. */
+		#define TOTAL_LUNS               1
+
+		/** Blocks in each LUN, calculated from the total capacity divided by the total number of Logical Units in the device. */
+		#define LUN_MEDIA_BLOCKS         (VIRTUAL_MEMORY_BLOCKS / TOTAL_LUNS)
+
+		/** Indicates if the disk is write protected or not. */
+		#define DISK_READ_ONLY           false
+		
 	/* Function Prototypes: */
 		void SetupHardware(void);
 
